--- a/styles.css
+++ b/styles.css
@@ -98,19 +98,23 @@ li {
     display: flex;
     justify-content: space-around;
 }
+.attribution-happy-hour {
+    font-size: 18px;
+}
 .attribution span {
-    margin: 24px 0 24px 0;
+    margin: 24px 0 0 0;
     font-size: 18px;
 }
 .spacer {
-    height: 4px;
+    height: 2px;
 }
 
 footer {
-    background-color: white;
+    /* background-color: white; */
     width: 100%;
-    height: 100%;
+    /* height: 100%; */
     display: flex;
+    flex-direction: row;
     justify-content: space-around;
     position: relative;
 }
@@ -119,6 +123,13 @@ footer {
     height: 120px;
     object-fit: contain;
     margin: 20px 0 20px 0;
+}
+.qrc-wrap {
+    display: flex;
+    flex-direction: column;
+    font-size: 16px;
+    justify-content: start;
+    align-items: center;
 }
 .banana {
     position: absolute;
@@ -143,4 +154,12 @@ footer {
 h1 {
     font-size: 24px;
     margin: 24px 0 24px 0;
+}
+.gif-wrap {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+}
+.gif {
+    margin-top: 12px;
 }
