--- a/styles.css
+++ b/styles.css
@@ -9,8 +9,8 @@ body {
     color: white;
     font-size: 24px;
     margin: 0;
-    height: 100vh;
-    max-height: 1000px;
+    min-height: 100vh;
+    /* max-height: 1000px; */
 }
 
 
@@ -20,8 +20,8 @@ a {
 
 .inner {
     width: 100vw;
-    height: 100%;
-    max-height: 100vh;
+    min-height: 100%;
+    /* max-height: 100vh; */
     max-width: 450px;
     background-image: url('/assets/darkPaper.jpg');
     background-size: cover;
@@ -31,8 +31,8 @@ a {
 .container {
     display: flex;
     justify-content: center;
-    height: 100%;
-    max-height: 100vh;
+    min-height: 100vh;
+    /* max-height: 100vh; */
 }
 
 header {
@@ -89,7 +89,11 @@ ol {
     list-style-position: inside;
     padding-left: 0;
 }
-li {
+ul {
+    list-style-position: inside;
+    padding-left: 0;
+}
+ol li {
     display: flex;
     justify-content: space-between;
     margin-bottom: 8px;
@@ -148,18 +152,38 @@ footer {
 }
 .list-presentation span p {
     margin: 6px 0 0 0;
-    font-size: 16px;
+    font-size: 18px;
 }
+
+.list-presenters li:not(:first-child) {
+    padding: 18px 0 12px 0;
+    /* border-top: 1px dashed white; */
+}
+.list-presenters li:first-child {
+    padding-bottom: 12px;
+}
+.list-presenters li:last-child {
+    padding-bottom: 0;
+}
+/* .list-presenters span p {
+    margin: 6px 0 0 0;
+    font-size: 18px;
+} */
 
 h1 {
     font-size: 24px;
     margin: 24px 0 24px 0;
 }
-.gif-wrap {
+.img-wrap {
     display: flex;
     flex-direction: row;
     justify-content: space-around;
 }
-.gif {
+.img-wrap img {
+    width: 90%;
+    object-fit: contain;
+    margin-top: 12px;
+}
+.img-wrap iframe {
     margin-top: 12px;
 }
