--- a/styles.css
+++ b/styles.css
@@ -23,7 +23,7 @@ a {
     min-height: 100%;
     /* max-height: 100vh; */
     max-width: 450px;
-    background-image: url('/assets/darkPaper.jpg');
+    background-image: url('assets/darkPaper.jpg');
     background-size: cover;
     background-repeat: no-repeat;
 }
@@ -42,7 +42,7 @@ header {
 }
 
 .logo-home {
-    background-image: url('/assets/logo.png');
+    background-image: url('assets/logo.png');
     background-size: contain;
     background-repeat: no-repeat;
     background-position-x: center;
@@ -62,7 +62,7 @@ header {
 }
 
 .logo {
-    background-image: url('/assets/logo.png');
+    background-image: url('assets/logo.png');
     background-size: contain;
     background-repeat: no-repeat;
     background-position-x: center;
