--- a/styles.css
+++ b/styles.css
@@ -104,6 +104,7 @@ ol li {
 }
 .attribution-happy-hour {
     font-size: 18px;
+    margin: 0 32px 0 32px;
 }
 .attribution span {
     margin: 24px 0 0 0;
