font fix for mobile

--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: 'Letters For Learners', sans-serif;
-    src: url('/assets/Letters\ for\ Learners.ttf');
+    src: url('assets/Letters\ for\ Learners.ttf');
 }
 
 body {
