--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,7 @@
 @font-face {
     font-family: 'Letters For Learners', sans-serif;
-    src: url('assets/Letters\ for\ Learners.ttf');
+    src: url('assets/Letters\ for\ Learners.woff2') format('woff2'),
+        url('assets/Letters\ for\ Learners.woff') format('woff');
 }
 
 body {
