--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,8 @@
     font-family: 'Letters For Learners', sans-serif;
     src: url('assets/Letters\ for\ Learners.woff2') format('woff2'),
         url('assets/Letters\ for\ Learners.woff') format('woff'),
-        url('assets/Letters\ for\ Learners.ttf') format('truetype');
+        url('assets/Letters\ for\ Learners.ttf') format('truetype'),
+        url('assets/Letters\ for\ Learners.svg#svgFontName') format('svg');
 }
 
 body {
