--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,9 @@
 @font-face {
     font-family: 'Letters For Learners', sans-serif;
-    src: url('assets/Letters\ for\ Learners.woff2') format('woff2'),
-        url('assets/Letters\ for\ Learners.woff') format('woff'),
-        url('assets/Letters\ for\ Learners.ttf') format('truetype'),
-        url('assets/Letters\ for\ Learners.svg#svgFontName') format('svg');
+    src: url('assets/LettersforLearners.woff2') format('woff2'),
+        url('assets/LettersforLearners.woff') format('woff'),
+        url('assets/LettersforLearners.ttf') format('truetype'),
+        url('assets/LettersforLearners.svg#svgFontName') format('svg');
 }
 
 body {
