--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@
     src: url('assets/LettersforLearners.woff2') format('woff2'),
         url('assets/LettersforLearners.woff') format('woff'),
         url('assets/LettersforLearners.ttf') format('truetype'),
-        url('assets/LettersforLearners.svg#svgFontName') format('svg');
+        url('assets/LettersforLearners.svg') format('svg');
 }
 
 body {
